2007-09-18  Eitan Isaacson  <eitan@ascender.com>

	* macaroon/playback/Makefile.am: Added new files, removed old
	ones.
	* macaroon/playback/__init__.py: Import package into namesapce.
	* macaroon/playback/keypress_actions.py: New home of all keypress 
	actions.
	* macaroon/playback/keypress_mimic.py: Keeping around for backward 
	compatability.
	* macaroon/playback/playback_sequence.py: Removed.
	* macaroon/playback/sequence.py: New home of MacroSequence.
	* macaroon/playback/sequence_step.py: New home of SequenceStep and
	a few basic actions.
	* macaroon/playback/wait_actions.py: Home of WaitAction and derivatives.
	* macaroon/record/main.py: Enable focus recording by default. Be
	more careful when getApplication() returns None.
	* macaroon/record/script_factory.py: Be more careful when 
	getApplication() returns None. Change sequence import line
	according to new refactor.

2007-09-14  Eitan Isaacson  <eitan@ascender.com>

	* macaroon/record/script_factory.py: Protect against None objects
	in desktop accessible when iterating throu applications.
	* macaroon/playback/keypress_mimic.py: Make wait for focus
	actions strings more readable.
	* macaroon/playback/playback_sequence.py: Make a wait action print
	to stderr when it times out.

	* macaroon/playback/keypress_mimic.py: Added WaitForDocLoad. Made
	key_code arguments optional in key press and release
	classes. Useful for cross platform.
	* macaroon/record/script_factory.py: Prepend contextual waitfors
	when a keypress comes out of the blue. Got rid of silly whitespaces.
	* macaroon/record/main.py: Put Level 2 as default. Toggle focus
	waiting. Attempt to predict consumed WM hotkeys.
	
2007-08-30  Eitan Isaacson  <eitan@ascender.com>

	* macaroon/playback/keypress_mimic.py: Override __call__ to remove 
	stepDone().
	* macaroon/playback/playback_sequence.py: Added stepDone() to the
	end of the AtomicAction __call__ method.
	
2007-08-07  Eitan Isaacson  <eitan@ascender.com>
